5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4129/executions/1800_2572.log
== TEST (2019-06-11 10:51:57) 
-- CODE:
from numpy import*
m = array(eval(input("Matriculas: ")))

s = 0

for x in range(size(m)):
	if (m[x]%2 == 0):
		s = s + 1
g2 = zeros(s, dtype=int):

for x in range(size(m)):
	if (m[x]%2 == 0):
		g[x] = m[x]
	
print(g)
-- ERROR:
File "XXXX", line 9
    g2 = zeros(s, dtype=int):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:52:02) 
-- CODE:
from numpy import*
m = array(eval(input("Matriculas: ")))

s = 0

for x in range(size(m)):
	if (m[x]%2 == 0):
		s = s + 1
g2 = zeros(s, dtype=int)

for x in range(size(m)):
	if (m[x]%2 == 0):
		g[x] = m[x]
	
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:52:33) 
-- CODE:
from numpy import*
m = array(eval(input("Matriculas: ")))

s = 0

for x in range(size(m)):
	if (m[x]%2 == 0):
		s = s + 1
g2 = zeros(s, dtype=int)

for x in range(size(m)):
	if (m[x]%2 == 0):
		g2[x] = m[x]
	
print(g2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:53:05) 
-- CODE:
from numpy import*
m = array(eval(input("Matriculas: ")))

s = 0

for x in range(size(m)):
	if (m[x]%2 == 0):
		s = s + 1
g2 = zeros(s, dtype=int)
a = 0
for x in range(size(m)):
	if (m[x]%2 == 0):
		g2[a] = m[x]
	a = a + 1
print(g2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:53:29) 
-- CODE:
from numpy import*
m = array(eval(input("Matriculas: ")))

s = 0

for x in range(size(m)):
	if (m[x]%2 == 0):
		s = s + 1
g2 = zeros(s, dtype=int)
a = 0

print(g2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:54:08) 
-- CODE:
from numpy import*
m = array(eval(input("Matriculas: ")))

s = 0

for x in range(size(m)):
	if (m[x]%2 != 0):
		s = s + 1
g2 = zeros(s, dtype=int)
a = 0
for x in range(size(m)):
	if (m[x]%2 != 0):
		g2[a] = m[x]
	
print(g2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:54:25) 
-- CODE:
from numpy import*
m = array(eval(input("Matriculas: ")))

s = 0

for x in range(size(m)):
	if (m[x]%2 != 0):
		s = s + 1
g2 = zeros(s, dtype=int)

for x in range(size(m)):
	if (m[x]%2 != 0):
		g2[x] = m[x]
	
print(g2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:54:45) 
-- CODE:
from numpy import*
m = array(eval(input("Matriculas: ")))

s = 0

for x in range(size(m)):
	if (m[x]%2 != 0):
		s = s + 1
g2 = zeros(s, dtype=int)
a = 0
for x in range(size(m)):
	if (m[x]%2 != 0):
		g2[a] = m[x]
	a = a + 1
print(g2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:55:00) 
-- CODE:
from numpy import*
m = array(eval(input("Matriculas: ")))

s = 0

for x in range(size(m)):
	if (m[x]%2 != 0):
		s = s + 1
g2 = zeros(s, dtype=int)
a = 0
for x in range(size(m)):
	if (m[x]%2 != 0):
		g2[a] = m[x]
	
print(g2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:55:37) 
-- CODE:
from numpy import*
m = array(eval(input("Matriculas: ")))

s = 0

for x in range(size(m)):
	if (m[x]%2 != 0):
		s = s + 1
g2 = zeros(s, dtype=int)
a = 0
for x in range(size(m)):
	if (m[x]%2 != 0):
		g2[x] = m[x]
	
print(g2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:56:29) 
-- CODE:
from numpy import*
m = array(eval(input("Matriculas: ")))

s = 0

for x in range(size(m)):
	if (m[x]%2 != 0):
		s = s + 1
g2 = zeros(s, dtype=int)
a = 0
for x in range(size(m)):
	if (m[x]%2 != 0):
		g2[x] = m[x]
	
print(g2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:56:57) 
-- CODE:
from numpy import*
m = array(eval(input("Matriculas: ")))

s = 0

for x in range(size(m)):
	if (m[x]%2 != 0):
		s = s + 1
g2 = zeros(s, dtype=int)
a = 0


print(g2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:58:08) 
-- CODE:
from numpy import*
m = array(eval(input("Matriculas: ")))

s = 0

for x in range(size(m)):
	if (m[x]%2 != 0):
		s = s + 1
g2 = zeros(s, dtype=int)
a = 0

for a in range(size(m)):
	if(m[x]%2 != 0):
		print(m[x])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:58:25) 
-- CODE:
from numpy import*
m = array(eval(input("Matriculas: ")))

s = 0

for x in range(size(m)):
	if (m[x]%2 != 0):
		s = s + 1
g2 = zeros(s, dtype=int)


for a in range(size(m)):
	if(m[x]%2 != 0):
		print(m[x])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:59:07) 
-- CODE:
from numpy import*
m = array(eval(input("Matriculas: ")))
g = m
s = 0

for x in range(size(m)):
	if (m[x]%2 != 0):
		s = s + 1
g2 = zeros(s, dtype=int)


for a in range(size(m)):
	if(m[a]%2 != 0):
		print(m[a])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:00:05) 
-- CODE:
from numpy import*
m = array(eval(input("Matriculas: ")))
g = m
s = 0

for x in range(size(m)):
	if (m[x]%2 != 0):
		s = s + 1
g2 = zeros(s, dtype=int)

y = 0
for a in range(size(m)):
	if(m[a]%2 != 0):
		g2[y] = m[a]
	y = y + 1
print(g2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:00:25) 
-- CODE:
from numpy import*
m = array(eval(input("Matriculas: ")))
g = m
s = 0

for x in range(size(m)):
	if (m[x]%2 != 0):
		s = s + 1
g2 = zeros(s, dtype=int)


for a in range(size(m)):
	if(m[a]%2 != 0):
		g2[a] = m[a]

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:00:59) 
-- CODE:
from numpy import*
m = array(eval(input("Matriculas: ")))
g = m
s = 0

for x in range(size(m)):
	if (m[x]%2 != 0):
		s = s + 1
g2 = zeros(s, dtype=int)


for a in range(size(m)):
	if(m[a]%2 != 0):
		b = m[a]
		
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:01:20) 
-- CODE:
from numpy import*
m = array(eval(input("Matriculas: ")))
g = m
s = 0
b = 0
for x in range(size(m)):
	if (m[x]%2 != 0):
		s = s + 1
g2 = zeros(s, dtype=int)


for a in range(size(m)):
	if(m[a]%2 != 0):
		b = m[a]
		
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:01:59) 
-- CODE:
from numpy import*
m = array(eval(input("Matriculas: ")))
g = m
s = 0
b = 0
for x in range(size(m)):
	if (m[x]%2 != 0):
		s = s + 1
g2 = zeros(s, dtype=int)


for a in range(size(m)):
	if(m[a]%2 != 0):
		b = m[a]
	else:
		
	print(b)
-- ERROR:
File "XXXX", line 17
    print(b)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:02:06) 
-- CODE:
from numpy import*
m = array(eval(input("Matriculas: ")))
g = m
s = 0
b = 0
for x in range(size(m)):
	if (m[x]%2 != 0):
		s = s + 1
g2 = zeros(s, dtype=int)


for a in range(size(m)):
	if(m[a]%2 != 0):
		b = m[a]
	else:
		
	print(b)
-- ERROR:
File "XXXX", line 17
    print(b)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:02:49) 
-- CODE:
from numpy import*
m = array(eval(input("Matriculas: ")))
g = m
s = 0
b = 0
for x in range(size(m)):
	if (m[x]%2 != 0):
		s = s + 1
g2 = zeros(s, dtype=int)


for a in range(size(m)):
	if(m[a]%2 != 0):
		print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:04:29) 
-- CODE:
from numpy import*
m = array(eval(input("Matriculas: ")))
g = m
s = 0
b = 0
for x in range(size(m)):
	if (m[x]%2 != 0):
		s = s + 1
g2 = zeros(s, dtype=int)


for a in range(size(g2)):
	if(m[a]%2 != 0):
		print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:05:07) 
-- CODE:
from numpy import*
m = array(eval(input("Matriculas: ")))
g = m
s = 0
b = 0
for x in range(size(m)):
	if (m[x]%2 != 0):
		s = s + 1
g2 = zeros(s, dtype=int)


for a in range(size(g2)):
	if(m[a]%2 != 0):
		b = m[a]
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:05:22) 
-- CODE:
from numpy import*
m = array(eval(input("Matriculas: ")))
g = m
s = 0
b = 0
for x in range(size(m)):
	if (m[x]%2 != 0):
		s = s + 1
g2 = zeros(s, dtype=int)


for a in range(size(g2)):
	if(m[a]%2 != 0):
		b = m[a]
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:05:27) 
-- CODE:
from numpy import*
m = array(eval(input("Matriculas: ")))
g = m
s = 0
b = 0
for x in range(size(m)):
	if (m[x]%2 != 0):
		s = s + 1
g2 = zeros(s, dtype=int)


for a in range(size(g2)):
	if(m[a]%2 != 0):
		b = m[a]
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:38:52) 
-- CODE:
from numpy import*
m = array(eval(input("Matriculas: ")))

s = 0

for x in range(size(m)):
	if (m[x]%2 != 0):
		s = s + 1
g2 = zeros(s, dtype=int)
g = 0
b = 0 

for a in range(size(g2)):
	if(m[a]%2 != 0):
		g2[b] = m[a]
		b += 1
	g += 1
print(g2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:39:51) 
-- CODE:
from numpy import*
m = array(eval(input("Matriculas: ")))

s = 0

for x in range(size(m)):
	if (m[x]%2 != 0):
		s = s + 1
g2 = zeros(s, dtype=int)
g = 0
b = 0 

for a in range(size(g2)):
	if(m[g]%2 != 0):
		g2[b] = m[g]
		b = b + 1
	g = g  + 1 
print(g2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:40:26) 
-- CODE:
from numpy import*
m = array(eval(input("Matriculas: ")))

s = 0

for x in range(size(m)):
	if (m[x]%2 != 0):
		s = s + 1
g2 = zeros(s, dtype=int)
g = 0
b = 0 

for a in range(size(m)):
	if(m[g]%2 != 0):
		g2[b] = m[g]
		b = b + 1
	g = g  + 1 
print(g2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:40:27) 
-- CODE:
from numpy import*
m = array(eval(input("Matriculas: ")))

s = 0

for x in range(size(m)):
	if (m[x]%2 != 0):
		s = s + 1
g2 = zeros(s, dtype=int)
g = 0
b = 0 

for a in range(size(m)):
	if(m[g]%2 != 0):
		g2[b] = m[g]
		b = b + 1
	g = g  + 1 
print(g2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 22:40:43) 
-- CODE:
from numpy import*
m = array(eval(input("Matriculas: ")))

s = 0

for x in range(size(m)):
	if (m[x]%2 != 0):
		s = s + 1
g2 = zeros(s, dtype=int)
g = 0
b = 0 

for a in range(size(m)):
	if(m[g]%2 != 0):
		g2[b] = m[g]
		b = b + 1
	g = g  + 1 
print(g2)
-- EXECUTION TIME:
1.10915
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:37:58) 
-- CODE:
from numpy import*
m = array(eval(input("Matriculas: ")))

s = 0

for x in range(size(m)):
	if (m[x]%2 != 0):
		s = s + 1
g2 = zeros(s, dtype=int)
g = 0
b = 0

for a in range(size(m)):
	if(m[a]%2 != 0):
		g2[b] = m[a]
		b = b + 1
	g = g  + 1 
print(g2)
-- EXECUTION TIME:
1.04344
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
